# rpg-tui

./: Cargo.toml  README.md  README.zh-CN.md  TODO.md  TODO.zh-CN.md
config/: difficulty.toml
locales/: en.yml  ja.yml  ko.yml  zh-CN.yml  zh-TW.yml
src/: app.rs  lib.rs  main.rs  ui.rs
src/game/: balance.rs  battle.rs  combat.rs  config.rs  encounter.rs  event.rs  mod.rs  model.rs  progression.rs  save.rs  state.rs  town.rs  world.rs
src/ui/: footer.rs  map.rs  sidebar.rs
tests/: full_flow.rs
