[package]
name = "rpg-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
rand = "0.9"
rust-i18n = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
